# cmake_tutorial

step_1/: CMakeLists.txt  step_1.cpp
step_2/: CMakeLists.txt  step_2.cpp  step_2_config.hpp  step_2_config.hpp.in
